# pbdlib

./: CMakeLists.txt  Copyright.txt  README.md  index.html  params.json
data/: data_txyz.txt
data/pgmm/: Data01.txt  Data02.txt  Data03.txt  Mu02.txt  Param01.txt  Param02.txt  Param03.txt  Param04.txt  Priors02.txt  Sigma02.txt
doc/: Doxyfile
include/pbdlib/: datapoints.h  demonstration.h  gmm.h  gmr.h  mvn.h  parameters.h  pgmm.h
samples/: CMakeLists.txt  learn_gmm.cpp  learn_pgmm.cpp  repro_gmr.cpp
src/: datapoints.cpp  demonstration.cpp  gmm.cpp  gmr.cpp  mvn.cpp  parameters.cpp  pgmm.cpp
test/: CMakeLists.txt  test_datapoints.cpp  test_demonstration.cpp  test_demoparams.cpp
